--- a/Python Basics/5.Loops.ipynb
+++ b/Python Basics/5.Loops.ipynb
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "id": "12ba05bc",
    "metadata": {},
    "outputs": [
@@ -256,7 +256,7 @@
        " 'Neptune': 'N'}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "6a5348a6",
    "metadata": {},
    "outputs": [
@@ -277,28 +277,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   Mercury begins with \"M\"\n",
-      "     Venus begins with \"V\"\n",
-      "     Earth begins with \"E\"\n",
-      "      Mars begins with \"M\"\n",
-      "   Jupiter begins with \"J\"\n",
-      "    Saturn begins with \"S\"\n",
-      "    Uranus begins with \"U\"\n",
-      "   Neptune begins with \"N\"\n"
+      " Mercury begins with \"M\"\n",
+      "   Venus begins with \"V\"\n",
+      "    Mars begins with \"M\"\n",
+      " Jupiter begins with \"J\"\n",
+      "  Saturn begins with \"S\"\n",
+      "  Uranus begins with \"U\"\n",
+      " Neptune begins with \"N\"\n"
      ]
     }
    ],
    "source": [
     "for planet, initial in planet_to_initial.items():\n",
-    "    print(\"{} begins with \\\"{}\\\"\".format(planet.rjust(10), initial))"
+    "    print(\"{} begins with \\\"{}\\\"\".format(planet.rjust(8), initial))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "cda8c06f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Bhavan': '24', 'Rashmi': '24', 'Prithvi': '26', 'Mahesh': '29', 'Sameer': '25'}\n"
+     ]
+    }
+   ],
    "source": [
     "user_dict = {}\n",
     "for _ in range(5):\n",
@@ -341,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "28e89a72",
    "metadata": {},
    "outputs": [
@@ -349,16 +356,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 2, 4, 6, 8, 10, 12, 14, 16, 18, 20, 22, 24, 26, 28, 30, 32, 34, 36, 38, 40, 42, 44, 46, 48]\n"
+      "[1, 3, 5, 7, 9, 11, 13, 15, 17, 19, 21, 23, 25, 27, 29, 31, 33, 35, 37, 39, 41, 43, 45, 47, 49]\n"
      ]
     }
    ],
    "source": [
     "#get all the even numbers in a given list \n",
     "a = range(50)\n",
-    "even_list =[]\n",
+    "even_list = []\n",
     "for i in a:\n",
-    "    if i%2==0:\n",
+    "    if i%2!=0:\n",
     "        even_list.append(i)\n",
     "\n",
     "print(even_list)"
@@ -366,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "b8bc7558",
    "metadata": {},
    "outputs": [
@@ -374,7 +381,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sum of all the elements in the given list is  36\n"
+      "Sum of all the elements in the given tuple is  36\n"
      ]
     }
    ],
@@ -384,7 +391,7 @@
     "_sum=0\n",
     "for i in a:\n",
     "    _sum+=i\n",
-    "print('Sum of all the elements in the given list is ', _sum)"
+    "print('Sum of all the elements in the given tuple is ', _sum)"
    ]
   },
   {
@@ -455,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "01763d0a",
    "metadata": {},
    "outputs": [
@@ -463,8 +470,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[6]\n",
-      "[6, 720]\n",
       "[6, 720, 241920]\n"
      ]
     }
@@ -478,12 +483,12 @@
     "    for j in i:\n",
     "        prod *= j\n",
     "    b.append(prod)    \n",
-    "    print(b)"
+    "print(b)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "id": "6449621f",
    "metadata": {
     "scrolled": true
@@ -563,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "id": "02b21869",
    "metadata": {},
    "outputs": [
@@ -587,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "id": "d8e08108",
    "metadata": {},
    "outputs": [
@@ -601,7 +606,7 @@
    ],
    "source": [
     "# Guessing game with a while loop\n",
-    "secret_number = 7\n",
+    "secret_number = 1.2\n",
     "guess = 0\n",
     "while guess != secret_number:\n",
     "    guess = int(input(\"Guess the secret number: \"))\n",
@@ -691,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "id": "22ad8f64",
    "metadata": {},
    "outputs": [
@@ -725,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "id": "e40f08d1",
    "metadata": {},
    "outputs": [
