--- a/Python Basics/5.Loops.ipynb
+++ b/Python Basics/5.Loops.ipynb
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 38,
    "id": "cda8c06f",
    "metadata": {},
    "outputs": [
@@ -302,7 +302,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Bhavan': '24', 'Rashmi': '24', 'Prithvi': '26', 'Mahesh': '29', 'Sameer': '25'}\n"
+      "{'Bhavan': '24', 'Rashmi': '24', 'Soundrya': '24', 'Prithvi': '26', 'Mahesh': '29'}\n"
      ]
     }
    ],
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 40,
    "id": "522a2ecb",
    "metadata": {},
    "outputs": [
@@ -325,7 +325,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10 is Not a prime number\n"
+      "4 is Not a prime number\n"
      ]
     }
    ],
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 42,
    "id": "28e89a72",
    "metadata": {},
    "outputs": [
@@ -356,7 +356,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 3, 5, 7, 9, 11, 13, 15, 17, 19, 21, 23, 25, 27, 29, 31, 33, 35, 37, 39, 41, 43, 45, 47, 49]\n"
+      "[0, 2, 4, 6, 8, 10, 12, 14, 16, 18, 20, 22, 24, 26, 28, 30, 32, 34, 36, 38, 40, 42, 44, 46, 48]\n"
      ]
     }
    ],
@@ -365,7 +365,7 @@
     "a = range(50)\n",
     "even_list = []\n",
     "for i in a:\n",
-    "    if i%2!=0:\n",
+    "    if i%2 == 0:\n",
     "        even_list.append(i)\n",
     "\n",
     "print(even_list)"
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 43,
    "id": "b8bc7558",
    "metadata": {},
    "outputs": [
@@ -388,7 +388,7 @@
    "source": [
     "#get the sum of all numbers in a given tuple/list\n",
     "a = (1,2,3,4,5,6,7,8)\n",
-    "_sum=0\n",
+    "_sum = 0\n",
     "for i in a:\n",
     "    _sum+=i\n",
     "print('Sum of all the elements in the given tuple is ', _sum)"
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 44,
    "id": "813d25be",
    "metadata": {},
    "outputs": [
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 48,
    "id": "b8bbb34f",
    "metadata": {},
    "outputs": [
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 49,
    "id": "01763d0a",
    "metadata": {},
    "outputs": [
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 50,
    "id": "d8e08108",
    "metadata": {},
    "outputs": [
@@ -606,7 +606,7 @@
    ],
    "source": [
     "# Guessing game with a while loop\n",
-    "secret_number = 1.2\n",
+    "secret_number = 7\n",
     "guess = 0\n",
     "while guess != secret_number:\n",
     "    guess = int(input(\"Guess the secret number: \"))\n",
@@ -779,7 +779,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
+   "id": "031eb6b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = range(11)\n",
+    "\n",
+    "for b in a:\n",
+    "    if b == 8:\n",
+    "        break\n",
+    "    print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "38086e77",
    "metadata": {},
    "outputs": [
@@ -789,22 +819,23 @@
      "text": [
       "Kruthick\n",
       "Chandan\n",
-      "Shashi\n"
+      "Shashi\n",
+      "Madesh\n",
+      "Harshitha\n"
      ]
     }
    ],
    "source": [
     "a=['Kruthick','Chandan', 'Shashi', 'Madesh','Harshitha', 'Hema','Benki']\n",
     "for i in a:\n",
-    "    #print(i)\n",
-    "    if i=='Madesh':\n",
+    "    if i == 'Hema':\n",
     "        break\n",
     "    print(i)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -849,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "d37cd45e",
    "metadata": {},
    "outputs": [
@@ -876,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "id": "44a4e4b9",
    "metadata": {},
    "outputs": [
@@ -884,7 +915,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5\n"
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
      ]
     }
    ],
@@ -892,7 +932,32 @@
     "for i in range(10):\n",
     "    if i == 5:\n",
     "        pass\n",
-    "        print(i)"
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "ff045363",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "count = 0\n",
+    "while count < 5:\n",
+    "    if count == 3:\n",
+    "        break\n",
+    "    print(count)\n",
+    "    count += 1"
    ]
   },
   {
@@ -908,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "id": "08a3f8ce",
    "metadata": {},
    "outputs": [
@@ -932,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "id": "b4aa7417",
    "metadata": {},
    "outputs": [
@@ -944,7 +1009,6 @@
       "(1, 2)\n",
       "(2, 3)\n",
       "(3, 4)\n",
-      "(4, 5)\n",
       "(5, 6)\n",
       "(6, 7)\n",
       "(7, 8)\n",
@@ -957,12 +1021,14 @@
     "numbers = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
     "\n",
     "for i in enumerate(numbers):\n",
+    "    if i[0] == 4:\n",
+    "        continue\n",
     "    print(i)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "id": "0587f5fc",
    "metadata": {},
    "outputs": [
@@ -989,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "id": "716e69ef",
    "metadata": {},
    "outputs": [
@@ -997,12 +1063,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-2, -3, -4, "
+      "0, 1, 2, 4, "
      ]
     }
    ],
    "source": [
-    "for num in range(-2,-5,-1):\n",
+    "for num in range(0,5):\n",
+    "    if num == 3:\n",
+    "        continue\n",
     "    print(num, end=\", \")"
    ]
   },
@@ -1052,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "id": "cac87b5a",
    "metadata": {},
    "outputs": [
@@ -1073,13 +1141,13 @@
     "my_string=\"PYTHON\"\n",
     "x = 0\n",
     "for i in my_string:\n",
-    "    x=x+1\n",
+    "    x+=1\n",
     "    print(my_string[0:x])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "id": "37a61528",
    "metadata": {},
    "outputs": [
@@ -1088,26 +1156,26 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Invert Pyramid\n",
-      "          \n",
-      "*         \n",
-      "**        \n",
-      "***       \n",
-      "****      \n"
+      "Pyramid\n",
+      "\n",
+      "*\n",
+      "**\n",
+      "***\n",
+      "****\n"
      ]
     }
    ],
    "source": [
-    "print(\"\\nInvert Pyramid\")\n",
+    "print(\"\\nPyramid\")\n",
     "for i in range(5):\n",
     "    x = '*'\n",
     "    x=x*i\n",
-    "    print(f'{x: <10}')"
+    "    print(f'{x}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "id": "2647f32d",
    "metadata": {},
    "outputs": [
@@ -1117,11 +1185,11 @@
      "text": [
       "\n",
       "Invert Pyramid\n",
-      "     *****\n",
-      "      ****\n",
-      "       ***\n",
-      "        **\n",
-      "         *\n"
+      "*****\n",
+      "****\n",
+      "***\n",
+      "**\n",
+      "*\n"
      ]
     }
    ],
@@ -1130,7 +1198,7 @@
     "for i in range(5):\n",
     "    x = '*'\n",
     "    x=x*(5-i)\n",
-    "    print(f'{x: >10}')"
+    "    print(f'{x}')"
    ]
   },
   {
@@ -1218,7 +1286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "id": "cf467a0b",
    "metadata": {},
    "outputs": [
@@ -1228,7 +1296,7 @@
        "['1', '2', '3', '4', '5', '6', '7', '8', '9']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1250,7 +1318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "id": "cad54a87",
    "metadata": {},
    "outputs": [
@@ -1260,7 +1328,7 @@
        "{0: 0, 1: 2, 2: 4, 3: 6, 4: 8, 5: 10, 6: 12, 7: 14, 8: 16, 9: 18}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1272,7 +1340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 36,
    "id": "7b7073d9",
    "metadata": {},
    "outputs": [
@@ -1282,7 +1350,7 @@
        "{0: 0, 1: 1, 2: 4, 3: 9, 4: 16, 5: 25, 6: 36, 7: 49, 8: 64, 9: 81}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1294,7 +1362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 37,
    "id": "45c1b691",
    "metadata": {},
    "outputs": [
@@ -1304,7 +1372,7 @@
        "{'one': 1, 'two': 2, 'three': 3, 'four': 4, 'five': 5}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
