--- a/Python Basics/5.Loops.ipynb
+++ b/Python Basics/5.Loops.ipynb
@@ -317,6 +317,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "515a2abf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1 1 2 3 5 8 13 21 34 "
+     ]
+    }
+   ],
+   "source": [
+    "a, b = 0, 1\n",
+    "\n",
+    "for _ in range(10):\n",
+    "    print(a, end=' ')\n",
+    "    a, b = b, a + b"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 40,
    "id": "522a2ecb",
    "metadata": {},
